--- a/learn.html
+++ b/learn.html
@@ -74,7 +74,9 @@
         <h1>Navigator</h1>
         <!-- <a href="javascript:void(0)" class="closebtn" onclick="closeSideNav()">&times;</a> -->
         <a href="#intro">Intro</a>
-        <a href="#aboutTools">Tools</a>
+        <a href="#aboutTools">About Tools</a>
+        <a href="#aboutHandTools">Hand Tools</a>
+        <a href="#aboutFarmEq">Farm Machines</a>
         <a href="#footer">Footer</a>
     </div>
 
