--- a/about.html
+++ b/about.html
@@ -151,7 +151,7 @@
                     <img src="img/protosample/ico/kurt.jpg">
                     <div class="squadCardDesc">
                         <h3>Kurt Simera</h3>
-                        <p>I'm fine<br>I study well<br>My head hurts</p>
+                        <p>My head hurts<br>Help</p>
                     </div>
                 </div>
                 <div class="squadCard">
@@ -159,7 +159,7 @@
                     <div class="squadCardDesc">
                         <h3>Kenneth Manipis</h3>
                         <p>Join My Fandom</p>
-                        <p>@KennethManipis OFFICIAL FANS GROUP</p>
+                        <p>@KennethManipis <br>OFFICIAL FANS GROUP</p>
                     </div>
                 </div>
             </div>
