--- a/plants.html
+++ b/plants.html
@@ -53,6 +53,7 @@
     <link rel="stylesheet" href="css/returnTop.css" />
     <link rel="stylesheet" href="css/plants.css" />
     <link rel="stylesheet" href="css/footer.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
 
 
 
@@ -118,7 +119,7 @@
                     <path fill-rule="evenodd"
                         d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z" />
                 </svg></button>
-                <button name="btnShowNav" type="button" class="leftbtn showbtn" id="showNav" onclick="showmainNav()"><svg
+            <button name="btnShowNav" type="button" class="leftbtn showbtn" id="showNav" onclick="showmainNav()"><svg
                     width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd"
@@ -404,8 +405,10 @@
                             src="img/btn/social_media/GitHub-Mark/PNG/GitHub-Mark-Light-120px-plus.png"
                             alt="Make Crops Github Page"></a>
                     <a href="https://github.com/makecrops/makecrops.github.io" target="_blank"><img
-                            src="https://avatars2.githubusercontent.com/u/72895727" alt="makecrops.github.io Github repository"></a>
-                    <a href="https://github.com/lordgumball20" target="_blank"><img src="https://avatars0.githubusercontent.com/u/50789492"
+                            src="https://avatars2.githubusercontent.com/u/72895727"
+                            alt="makecrops.github.io Github repository"></a>
+                    <a href="https://github.com/lordgumball20" target="_blank"><img
+                            src="https://avatars0.githubusercontent.com/u/50789492"
                             alt="LordGumball's Github Profile"></a>
                 </div>
                 <hr class="dashed">
@@ -431,7 +434,8 @@
                         alt="Creative Commons License" style="border-width:0"
                         src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" /></a><br />Make Crops template by
                 <a href="https://github.com/lordgumball20">LordGumball20</a> is licensed
-                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative Commons
+                under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
+                    Commons
                     Attribution-ShareAlike 4.0 International License</a>.
             </div>
         </div>
