--- a/about.html
+++ b/about.html
@@ -142,8 +142,8 @@
             <div class="squadCardsContainer">
                 <div class="squadCard obscure">
                     <img src="img/protosample/favicon.png" style="filter: blur(5px)">
-                    <div class="squadCardDesc">
-                        <h3 id="randStr"></h3>
+                    <div class="squadCardDesc ganbaru">
+                        <span><h3 id="randStr"></h3></span>
                         <p>Who am I? Scroll down in the <a href="#footer">footer</a></p>
                     </div>
                 </div>
