--- a/plants.html
+++ b/plants.html
@@ -53,7 +53,7 @@
     <link rel="stylesheet" href="css/returnTop.css" />
     <link rel="stylesheet" href="css/plants.css" />
     <link rel="stylesheet" href="css/footer.css" />
-
+    <link rel="stylesheet" href="css/responsive.css" />
 
 
     <!-- Scripts -->
